--- a/navbar/styles.css
+++ b/navbar/styles.css
@@ -208,7 +208,7 @@ nav {
 }
 @media screen and (min-width: 800px) {
   .nav-center {
-    max-width: 1170px;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     align-items: center;
